feat(processor): implement kafka streams topology for ohlc aggregation